File cleanup (fixed tab spacing & prevented comments from rendering)

--- a/style/compiled/style.css
+++ b/style/compiled/style.css
@@ -130,14 +130,8 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 td { vertical-align: top; }
 
-/* Layout
---------------------------------------------- */
 body { font: normal 100% "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-/* ==|== ie specific styles ================================================= Please define your styles before this section. ========================================================================== */
-/* ==|== media queries ====================================================== EXAMPLE Media Query for Responsive Design. This example overrides the primary ('mobile first') styles Modify as content requires. ========================================================================== */
-@media only screen and (min-width: 35em) { /* Style adjustments for viewports that meet the condition */ }
-/* ==|== non-semantic helper classes ======================================== Please define your styles before this section. ========================================================================== */
 /* For image replacement */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
 
@@ -162,7 +156,6 @@ body { font: normal 100% "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 .clearfix { *zoom: 1; }
 
-/* ==|== print styles ======================================================= Print styles. Inlined to avoid required HTTP connection: h5bp.com/r ========================================================================== */
 @media print { * { background: transparent !important; color: black !important; box-shadow: none !important; text-shadow: none !important; filter: none !important; -ms-filter: none !important; }
   /* Black prints faster: h5bp.com/s */
   a, a:visited { text-decoration: underline; }
